--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
                 <a class="nav-link" href="#PopularCauses">Donate</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#PopularCauses"> Gallery</a>
+                <a class="nav-link" href="gallery.html"> Gallery</a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="#Blog">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#footer">Contact</a>
+                <a class="nav-link" href="#BeVolunteer">Contact</a>
               </li>
 
             </ul>
