--- a/index.html
+++ b/index.html
@@ -92,21 +92,21 @@
             <div class="carousel-item active">
               <div class="overlay"></div>
               <iframe width="420" height="500" src="https://www.youtube.com/embed/tgbNymZ7vqY"
-                poster="assets/images/home/videoImg.png">
+                poster="assets/images/videoImg.png">
               </iframe>
 
             </div>
             <div class="carousel-item">
               <div class="overlay"></div>
               <iframe width="420" height="500" src="https://www.youtube.com/embed/tgbNymZ7vqY"
-                poster="assets/images/home/videoImg.png">
+                poster="assets/images/videoImg.png">
               </iframe>
 
             </div>
             <div class="carousel-item">
               <div class="overlay"></div>
               <iframe width="420" height="500" src="https://www.youtube.com/embed/tgbNymZ7vqY"
-                poster="assets/images/home/videoImg.png">
+                poster="assets/images/videoImg.png">
               </iframe>
 
             </div>
@@ -191,7 +191,7 @@
         <div class="owl-carousel whatweDoCar">
           <div class="whatDoItem">
             <div class="whatDoItemImg">
-              <img src="assets/images/home/help.png" alt="">
+              <img src="assets/images/help.png" alt="">
             </div>
             <h3>Medical Help</h3>
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -199,7 +199,7 @@
           </div>
           <div class="whatDoItem">
             <div class="whatDoItemImg">
-              <img src="assets/images/home/wellness.png" alt="">
+              <img src="assets/images/wellness.png" alt="">
             </div>
             <h3>Medical Help</h3>
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -208,7 +208,7 @@
 
           <div class="whatDoItem">
             <div class="whatDoItemImg">
-              <img src="assets/images/home/water.png" alt="">
+              <img src="assets/images/water.png" alt="">
             </div>
             <h3>Medical Help</h3>
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -350,7 +350,7 @@
         <div class="LatestCar owl-carousel">
           <div class="DonationsBox clearfix">
             <div class="DonationsImg">
-              <img src="assets/images/home/1.png" alt="">
+              <img src="assets/images/1.png" alt="">
             </div>
             <div class="DonationsDesc">
               <h4>Joseph Ali</h4>
@@ -360,7 +360,7 @@
           </div>
           <div class="DonationsBox clearfix">
             <div class="DonationsImg">
-              <img src="assets/images/home/2.png" alt="">
+              <img src="assets/images/2.png" alt="">
             </div>
             <div class="DonationsDesc">
               <h4>Archer Khan</h4>
@@ -372,7 +372,7 @@
           </div>
           <div class="DonationsBox clearfix">
             <div class="DonationsImg">
-              <img src="assets/images/home/3.png" alt="">
+              <img src="assets/images/3.png" alt="">
             </div>
             <div class="DonationsDesc">
               <h4>Sara Ali</h4>
@@ -382,7 +382,7 @@
           </div>
           <div class="DonationsBox clearfix">
             <div class="DonationsImg">
-              <img src="assets/images/home/4.png" alt="">
+              <img src="assets/images/4.png" alt="">
             </div>
             <div class="DonationsDesc">
 
@@ -393,7 +393,7 @@
           </div>
           <div class="DonationsBox clearfix">
             <div class="DonationsImg">
-              <img src="assets/images/home/1.png" alt="">
+              <img src="assets/images/1.png" alt="">
             </div>
             <div class="DonationsDesc">
               <h4>Joseph Ali</h4>
@@ -415,7 +415,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-6 col-md-12">
         <div class="successImg">
-          <img src="assets/images/home/ben-white.png" alt="">
+          <img src="assets/images/ben-white.png" alt="">
         </div>
       </div>
       <div class="col-lg-6 col-md-12">
@@ -444,7 +444,7 @@
         <div class="VolunteerCar owl-carousel">
           <div class="VolunteerCarItem clearfix">
             <div class="VolnteerImg">
-              <img src="assets/images/Home/01.png" alt="">
+              <img src="assets/images/01.png" alt="">
             </div>
             <div class="VolunteerSocial">
               <ul>
@@ -470,7 +470,7 @@
           </div>
           <div class="VolunteerCarItem clearfix">
             <div class="VolnteerImg">
-              <img src="assets/images/Home/02.png" alt="">
+              <img src="assets/images/02.png" alt="">
             </div>
             <div class="VolunteerSocial">
               <ul>
@@ -496,7 +496,7 @@
           </div>
           <div class="VolunteerCarItem clearfix">
             <div class="VolnteerImg">
-              <img src="assets/images/Home/03.png" alt="">
+              <img src="assets/images/03.png" alt="">
             </div>
             <div class="VolunteerSocial">
               <ul>
@@ -522,7 +522,7 @@
           </div>
           <div class="VolunteerCarItem clearfix">
             <div class="VolnteerImg">
-              <img src="assets/images/Home/02.png" alt="">
+              <img src="assets/images/02.png" alt="">
             </div>
             <div class="VolunteerSocial">
               <ul>
@@ -564,7 +564,7 @@
         <div class="BlogSlider owl-carousel">
           <div class="BlogBox">
             <div class="BlogImg">
-              <img src="assets/images/home/05.png" alt="">
+              <img src="assets/images/05.png" alt="">
             </div>
             <div class="BlogDesc">
               <div class="BlogDate">Aug 18, 2020</div>
@@ -624,7 +624,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-6 col-md-12">
         <div class="successImg">
-          <img src="assets/images/home/vo.png" alt="">
+          <img src="assets/images/vo.png" alt="">
         </div>
       </div>
       <div class="col-lg-6 col-md-12">
@@ -709,14 +709,14 @@
           <div class="VolunteerSocial">
             <ul>
               <li>
-                <a href="#"><img src="assets/images/Home/facebook.png" alt=""></a>
+                <a href="#"><img src="assets/images/facebook.png" alt=""></a>
               </li>
               <li>
-                <a href="#"><img src="assets/images/Home/twitter.png" alt=""></a>
+                <a href="#"><img src="assets/images/twitter.png" alt=""></a>
               </li>
 
               <li>
-                <a href="#"><img src="assets/images/Home/linked.png" alt=""></a>
+                <a href="#"><img src="assets/images/linked.png" alt=""></a>
               </li>
             
             </ul>
