--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-6 col-md-12">
         <div class="successImg">
-          <img src="assets/images/ben-white.png" alt="">
+          <img src="assets/images/Home/ben-white.png" alt="">
         </div>
       </div>
       <div class="col-lg-6 col-md-12">
@@ -444,7 +444,7 @@
         <div class="VolunteerCar owl-carousel">
           <div class="VolunteerCarItem clearfix">
             <div class="VolnteerImg">
-              <img src="assets/images/01.png" alt="">
+              <img src="assets/images/Home/01.png" alt="">
             </div>
             <div class="VolunteerSocial">
               <ul>
@@ -470,7 +470,7 @@
           </div>
           <div class="VolunteerCarItem clearfix">
             <div class="VolnteerImg">
-              <img src="assets/images/02.png" alt="">
+              <img src="assets/images/Home/02.png" alt="">
             </div>
             <div class="VolunteerSocial">
               <ul>
@@ -496,7 +496,7 @@
           </div>
           <div class="VolunteerCarItem clearfix">
             <div class="VolnteerImg">
-              <img src="assets/images/03.png" alt="">
+              <img src="assets/images/Home/03.png" alt="">
             </div>
             <div class="VolunteerSocial">
               <ul>
