--- a/index.html
+++ b/index.html
@@ -208,6 +208,14 @@
 
           <div class="whatDoItem">
             <div class="whatDoItemImg">
+              <img src="assets/images/wellness.png" alt="">
+            </div>
+            <h3>Medical Help</h3>
+            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+
+          </div>
+          <div class="whatDoItem">
+            <div class="whatDoItemImg">
               <img src="assets/images/water.png" alt="">
             </div>
             <h3>Medical Help</h3>
