--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="owl-carousel whatweDoCar">
           <div class="whatDoItem">
             <div class="whatDoItemImg">
-              <img src="assets/images/help.png" alt="">
+              <img src="assets/images/Home/help.png" alt="">
             </div>
             <h3>Medical Help</h3>
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -199,7 +199,7 @@
           </div>
           <div class="whatDoItem">
             <div class="whatDoItemImg">
-              <img src="assets/images/wellness.png" alt="">
+              <img src="assets/images/Home/wellness.png" alt="">
             </div>
             <h3>Medical Help</h3>
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -208,7 +208,7 @@
 
           <div class="whatDoItem">
             <div class="whatDoItemImg">
-              <img src="assets/images/wellness.png" alt="">
+              <img src="assets/images/Home/wellness.png" alt="">
             </div>
             <h3>Medical Help</h3>
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -216,7 +216,7 @@
           </div>
           <div class="whatDoItem">
             <div class="whatDoItemImg">
-              <img src="assets/images/water.png" alt="">
+              <img src="assets/images/Home/water.png" alt="">
             </div>
             <h3>Medical Help</h3>
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -358,7 +358,7 @@
         <div class="LatestCar owl-carousel">
           <div class="DonationsBox clearfix">
             <div class="DonationsImg">
-              <img src="assets/images/1.png" alt="">
+              <img src="assets/images/Home/1.png" alt="">
             </div>
             <div class="DonationsDesc">
               <h4>Joseph Ali</h4>
@@ -368,7 +368,7 @@
           </div>
           <div class="DonationsBox clearfix">
             <div class="DonationsImg">
-              <img src="assets/images/2.png" alt="">
+              <img src="assets/images/Home/2.png" alt="">
             </div>
             <div class="DonationsDesc">
               <h4>Archer Khan</h4>
@@ -380,7 +380,7 @@
           </div>
           <div class="DonationsBox clearfix">
             <div class="DonationsImg">
-              <img src="assets/images/3.png" alt="">
+              <img src="assets/images/Home/3.png" alt="">
             </div>
             <div class="DonationsDesc">
               <h4>Sara Ali</h4>
@@ -390,7 +390,7 @@
           </div>
           <div class="DonationsBox clearfix">
             <div class="DonationsImg">
-              <img src="assets/images/4.png" alt="">
+              <img src="assets/images/Home/4.png" alt="">
             </div>
             <div class="DonationsDesc">
 
@@ -401,7 +401,7 @@
           </div>
           <div class="DonationsBox clearfix">
             <div class="DonationsImg">
-              <img src="assets/images/1.png" alt="">
+              <img src="assets/images/Home/1.png" alt="">
             </div>
             <div class="DonationsDesc">
               <h4>Joseph Ali</h4>
@@ -572,7 +572,7 @@
         <div class="BlogSlider owl-carousel">
           <div class="BlogBox">
             <div class="BlogImg">
-              <img src="assets/images/05.png" alt="">
+              <img src="assets/images/blog/05.png" alt="">
             </div>
             <div class="BlogDesc">
               <div class="BlogDate">Aug 18, 2020</div>
@@ -632,7 +632,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-6 col-md-12">
         <div class="successImg">
-          <img src="assets/images/vo.png" alt="">
+          <img src="assets/images/Home/vo.png" alt="">
         </div>
       </div>
       <div class="col-lg-6 col-md-12">
@@ -668,7 +668,7 @@
     <div class="row">
       <div class="col-lg-3 col-md-6">
         <div class="footerList">
-          <h4 class="footerTitle"> <i class="fab fa-map-marked"></i> Location</h4>
+          <h4 class="footerTitle"> <i class="fa fa-map-marker"></i> Location</h4>
    
         <ul>
           <li>
@@ -684,7 +684,7 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="footerList">
-          <h4 class="footerTitle">  <i class="fab  fa-clock"></i>  Opening Hours</h4>
+          <h4 class="footerTitle">  <i class="fa fa-clock"></i>  Opening Hours</h4>
           <ul>
             <li>
               <P>Monday – Friday
@@ -717,14 +717,14 @@
           <div class="VolunteerSocial">
             <ul>
               <li>
-                <a href="#"><img src="assets/images/facebook.png" alt=""></a>
+                <a href="#"><img src="assets/images/Home/facebook.png" alt=""></a>
               </li>
               <li>
-                <a href="#"><img src="assets/images/twitter.png" alt=""></a>
+                <a href="#"><img src="assets/images/Home/twitter.png" alt=""></a>
               </li>
 
               <li>
-                <a href="#"><img src="assets/images/linked.png" alt=""></a>
+                <a href="#"><img src="assets/images/Home/linked.png" alt=""></a>
               </li>
             
             </ul>
