--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,800;0,900;1,400&display=swap"
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="">
   <link rel="stylesheet" href="assets/css/owl.carousel.min.css" type="text/css">
   <link rel="stylesheet" href="assets/css/owl.carousel.css" type="text/css">
@@ -43,22 +44,22 @@
                 <a class="nav-link home active" href="index.html">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#aboutus">About us</a>
+                <a class="nav-link" href="aboutUs.html">About us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#PopularCauses">Causes</a>
+                <a class="nav-link" href="causes.html">Causes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#PopularCauses">Donate</a>
+                <a class="nav-link" href="#">Donate</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="gallery.html"> Gallery</a>
+                <a class="nav-link" href="Gallery.html"> Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Blog">Blog</a>
+                <a class="nav-link" href="blog.html">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#BeVolunteer">Contact</a>
+                <a class="nav-link" href="contactUs.html">Contact</a>
               </li>
 
             </ul>
@@ -660,7 +661,6 @@
     </div>
   </div>
 </section>
-<!--About Us End-->
 <!--- Start Footer --->
 <footer id="footer">
   <div class="container">
@@ -668,7 +668,7 @@
     <div class="row">
       <div class="col-lg-3 col-md-6">
         <div class="footerList">
-          <h4 class="footerTitle"> <i class="fa fa-map-marker"></i> Location</h4>
+          <h4 class="footerTitle"> <i class="fa fa-map-marker-alt"></i>Location</h4>
    
         <ul>
           <li>
@@ -699,7 +699,7 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="footerList">
-          <h4 class="footerTitle">Contact Us</h4>
+          <h4 class="footerTitle"> <i class="fas fa-mobile"></i>Contact Us</h4>
           <div >
             <ul>
               <li> <p>+1 123 456 7890 </p>
@@ -713,7 +713,7 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="footerList">
-          <h4 class="footerTitle">Stay Connected</h4>
+          <h4 class="footerTitle"><i class="fas fa-share-alt"></i> Stay Connected</h4>
           <div class="VolunteerSocial">
             <ul>
               <li>
