--- a/BlogDetails2.html
+++ b/BlogDetails2.html
@@ -118,7 +118,7 @@
     <div class="container">
         <div class="row justify-content-center">
 
-            <div class="col-md-12">
+            <div class="col-md-8">
                 <div class="BlogDetailsBox">
                     <div class="BlogDetailsImg">
                         <img src="assets/images/blog/blogDetails.png" alt="">
@@ -198,6 +198,27 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="rightSide">
+                    <ul>
+                        <h6>Related Articles</h6>
+                        <li><a href="#"><i class="fas fa-chevron-right"></i> Article 1</a></li>
+                        <li><a href="#"><i class="fas fa-chevron-right"></i> Article 2</a></li>
+                        <li><a href="#"><i class="fas fa-chevron-right"></i> Article 3</a></li>
+                        <li><a href="#"><i class="fas fa-chevron-right"></i> Article 4</a></li>
+                    </ul>
+                   <div class="tags">
+                    <h6>Related Articles</h6>
+                    <span><a href="#">tag1</a></span>
+                    <span><a href="#">tag2</a></span>
+                    <span>  <a href="#">tag3</a></span>
+                    <span><a href="#">tag3</a></span>
+                   </div>
+
+
                 </div>
             </div>
 
