--- a/BlogDetails2.html
+++ b/BlogDetails2.html
@@ -118,7 +118,7 @@
     <div class="container">
         <div class="row justify-content-center">
 
-            <div class="col-md-8">
+            <div class="col-lg-7 col-md-12" >
                 <div class="BlogDetailsBox">
                     <div class="BlogDetailsImg">
                         <img src="assets/images/blog/blogDetails.png" alt="">
@@ -201,7 +201,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-lg-5 col-md-12">
                 <div class="rightSide">
                     <ul>
                         <h6>Related Articles</h6>
@@ -210,9 +210,12 @@
                         <li><a href="#"><i class="fas fa-chevron-right"></i> Article 3</a></li>
                         <li><a href="#"><i class="fas fa-chevron-right"></i> Article 4</a></li>
                     </ul>
-                   <div class="tags">
-                    <h6>Related Articles</h6>
+                   <div class="tags clearfix">
+                    <h6>Tags</h6>
                     <span><a href="#">tag1</a></span>
+                    <span><a href="#">tag2</a></span>
+                    <span>  <a href="#">tag3</a></span>
+                    <span><a href="#">tag3</a></span>
                     <span><a href="#">tag2</a></span>
                     <span>  <a href="#">tag3</a></span>
                     <span><a href="#">tag3</a></span>
