--- a/BlogDetails2.html
+++ b/BlogDetails2.html
@@ -119,11 +119,11 @@
         <div class="row justify-content-center">
 
             <div class="col-lg-7 col-md-12" >
-                <div class="BlogDetailsBox">
+                <div class="BlogDetailsBox leftSide">
                     <div class="BlogDetailsImg">
                         <img src="assets/images/blog/blogDetails.png" alt="">
                     </div>
-                    <div class="BlogDeatilsDesc text-center">
+                    <div class="BlogDeatilsDesc ">
                         <h4>Their Expect Dinner & Trust Leadership Program</h4>
                         <div class="blogDate">
                             <span><i class="lni lni-calendar"></i> Aug 18, 2020</span> <span><i
@@ -204,11 +204,11 @@
             <div class="col-lg-5 col-md-12">
                 <div class="rightSide">
                     <ul>
-                        <h6>Related Articles</h6>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Article 1</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Article 2</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Article 3</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Article 4</a></li>
+                        <h6>Recent Blogs</h6>
+                        <li class="clearfix"> <div class="recntBlogImg"><img src="assets/images/blog/01.png" alt=""></div><div class="blogTitleDetails"> <a href="#">Blog 1 </a><h6>11/5/2020</h6></div></li>
+                        <li class="clearfix"> <div class="recntBlogImg"><img src="assets/images/blog/01.png" alt=""></div><div class="blogTitleDetails"> <a href="#">Blog 1 </a><h6>11/5/2020</h6></div></li>
+                        <li class="clearfix"> <div class="recntBlogImg"><img src="assets/images/blog/01.png" alt=""></div><div class="blogTitleDetails"> <a href="#">Blog 1 </a><h6>11/5/2020</h6></div></li>
+                        <li class="clearfix"> <div class="recntBlogImg"><img src="assets/images/blog/01.png" alt=""></div><div class="blogTitleDetails"> <a href="#">Blog 1 </a><h6>11/5/2020</h6></div></li>
                     </ul>
                    <div class="tags clearfix">
                     <h6>Tags</h6>
